src/Balsam/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: balsam-api
  namespace: balsam-system
spec:
  type: ClusterIP
  selector:
    app: balsam-api
  ports:
    - protocol: TCP
      port: 80 ##HTTP
      targetPort: 8080 ##Kopplat till containerport i deploymenten
